--- a/qml.qrc
+++ b/qml.qrc
@@ -16,5 +16,6 @@
         <file>qml/WaitingLayer.qml</file>
         <file>qml/MainView.qml</file>
         <file>qml/CustomTabButton.qml</file>
+        <file>qml/ResultsView.qml</file>
     </qresource>
 </RCC>
